--- a/rootdir/etc/init.sm8475.rc
+++ b/rootdir/etc/init.sm8475.rc
@@ -32,6 +32,12 @@ on boot
     chmod 0700 /sys/bus/platform/devices/soc:fingerprint_fpc/finger_irq
     chmod 0700 /sys/bus/platform/devices/soc:fingerprint_fpc/power_cfg
     chmod 0666 /dev/input/event2
+    chmod 0666 /sys/module/perfmgr/parameters/perfmgr_enable
+    chmod 0666 /sys/module/perfmgr/parameters/min_freq_limit_level
+    chmod 0666 /sys/module/perfmgr/parameters/max_freq_limit_level
+    chown system system /sys/module/perfmgr/parameters/perfmgr_enable
+    chown system system /sys/module/perfmgr/parameters/min_freq_limit_level
+    chown system system /sys/module/perfmgr/parameters/max_freq_limit_level
 
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
@@ -44,6 +50,7 @@ on post-fs-data
     mkdir /data/vendor/fingerprint 0770 system system
     mkdir /mnt/vendor/persist/goodix 0770 system system
     mkdir /mnt/vendor/persist/fpc 0770 system system
+
 
 on property:persist.sys.xtra-daemon.enabled=*
     restart loc_launcher
